Fix overstretched newpost images in viewforum

--- a/theme/viewforum.css
+++ b/theme/viewforum.css
@@ -19,6 +19,8 @@
 div.table-title .table-titletext img {
   float: left;
   margin-right: 5px;
+  margin-top: 4px;
+  min-height: 9px;
 }
 
 /*---------------------------------------------------------*/
